<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">久久金途</string>
    <string name="hello_world">Hello world!</string>
    <string name="group_travel">跟团游</string>
    <string name="selfhelp_travel">自助游</string>
    <string name="cruise">邮轮</string>
    <string name="drive">自驾游</string>
    <string name="ticket_home">景点门票</string>
    <string name="visa">签证</string>
    <string name="hotel">酒店</string>
    <string name="selfhelp_plane">机票</string>
    <string name="train_ticket">火车票</string>
    <string name="jiujiu_server">久久金服</string>
    <string name="mainpage_peical_sell_title">手机特卖</string>
    <string name="more">更多</string>
    <string name="theme_travel">主题游</string>
    <string name="manager_recommend">产品经理推荐</string>
    <string name="best_recommend">最牛推荐</string>
    <string name="satisfaction">%1$s%%满意</string>
    <string name="calendar_yuan">¥%1$s</string>
    <string name="company_name">成都国信安信息产业基地有限公司</string>
    <string name="mainpage_tel">客服电话：</string>
    <string name="mainpage_tel_content">(028)86038770</string>
    <string name="mainpage_opentime">营业时间：</string>
    <string name="mainpage_opentime_content">周一至周日9 : 00  -  18 : 00</string>
    <string name="mainpage_address">公司地址：</string>
    <string name="mainpage_address_content">成都市高新区云华路333号国家西部信息安全产业基地园区内 </string>
    <string name="sunshine">三大阳光保证</string>
    <string name="sunshine_travel">阳光行程</string>
    <string name="sunshine_price">阳光价格</string>
    <string name="sunshine_service">阳光服务</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="tongtuanliao">同团聊</string>
    <string name="wodedingdan">我的订单</string>
    <string name="shangcheng">商城</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="mine">我的</string>
    <string name="wodexiaojinku">我的小金库</string>
    <string name="huodong">活动</string>
    <string name="ziliaoguanjia">资料管家</string>
    <string name="shequ">社区</string>
    <string name="diyongquan_lvyouquan">抵用券、抵用券</string>
    <string name="huodong_quanyi">活动、权益</string>
    <string name="gerenziliao_changyongziliao">个人资料、常用资料</string>
    <string name="zhaopian_youji_wenda">照片、游记、问答</string>
    <string name="xiugaimima_shezhi">修改密码、设置</string>
    <string name="safelogout">安全登出</string>
    <string name="login_by_jiujiu_user">久久账号登录</string>
    <string name="login_by_dynamic">动态密码登录</string>
    <string name="login_failed">登录失败，请检查账号和密码是否正确</string>
    <string name="login_false">未登录</string>
    <string name="login_id">手机号/会员名/昵称/邮箱</string>
    <string name="login_invitation_code_only_by_new_register">"您已登陆邀请码仅供新会员注册使用"</string>
    <string name="login_password">密码</string>
    <string name="login_register">注册新用户</string>
    <string name="login_right_now">立即登录</string>
    <string name="login_submit">登录</string>
    <string name="login_true">已登录</string>
    <string name="reset_all">全部重置</string>
    <string name="reset_password">找回密码</string>
    <string name="tourist_mobile">手机号</string>
    <string name="send_dynamic_code"><u>发送动态密码</u></string>
    <string name="label_partner_login">第三方账号登录</string>
    <string name="regist_and_login">注册并登录</string>
    <string name="regist_phone_hint">11位中国大陆手机号码</string>
    <string name="regist_success">亲，恭喜您，您已成功注册并登录~</string>
    <string name="regist_password_hint">密码,6–16位字母或数字</string>
    <string name="regist_user">请输入用户名</string>
    <string name="regist_phone">请输入手机号</string>
    <string name="input_verification_code">请输入右侧验证码</string>
    <string name="input_phone_code">请输入手机验证码</string>
    <string name="sent_verification_code">发送验证码</string>
    <string name="i_have_small_favorite_invitation_code"><u>我有注册邀请码</u></string>
    <string name="browse_history_title">浏览历史</string>
    <string name="change_password">修改密码</string>
    <string name="setting_message">消息设置</string>
    <string name="clear_picture_cache">清空图片缓存</string>
    <string name="picture_cache_cleared">图片缓存已清空</string>
    <string name="product_detail">产品详情</string>
    <string name="product_id">产品编号：%1$s</string>
    <string name="home_page_yes_set_out">%1$s出发</string>
    <string name="satisfaction_title_2">满意度</string>
    <string name="satisfaction_percent">%1$s%</string>
    <string name="group_product_promotional_price">促销价：</string>
    <string name="yuan">￥%1$s</string>
    <string name="beyond_yuan">￥%1$s起</string>
    <string name="beyond_yuan_back">起</string>
    <string name="beyond_yuan_front">￥%1$s</string>
    <string name="evaluate_count_new">点评(%1$s)</string>
    <string name="group_term_title">查看和选择团期（%1$s）</string>
    <string name="route_introduce">行程介绍</string>
    <string name="product_feature">产品特色</string>
    <string name="fee_and_book_title">费用&amp;预订须知</string>
    <string name="q_and_a_online">在线问答（%1$s）</string>
    <string name="travel_note">相关游记</string>
    <string name="search_city">选择城市</string>
    <string name="search_location">当前定位城市</string>
    <string name="hot_city">热门预定城市</string>
    <string name="search_pinyin">拼音搜索</string>

</resources>